# rinhhack9-model-manager

./: Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: application.py  config.py  container.py
app/amqp/: model_consumer.py
app/api/models/: common.py  predict.py
app/api/routers/: predict_router.py
app/helpers/: exceptions.py  utils.py
app/helpers/aiohttp_client/: __init__.py  aio_http_client.py
app/helpers/api/: __init__.py  common_types.py  exception_handler.py  health_check.py  pydantic_mixins.py  routers_dependencies.py  routers_generic.py  routers_mixin.py  server.py  static_swagger.py  websocket_manager.py
app/helpers/asyncio_utils/: __init__.py  async_executor.py  run_with_timeout.py  safe_gather.py  scheduled_task.py
app/helpers/auth/: __init__.py  authorize_decorator.py  client.py  keycloak_auth_middlware.py  schemas.py  token_provider.py  user_checker.py
app/helpers/container/: __init__.py
app/helpers/db/: __init__.py  base_registry.py  connection.py  database_background_task.py  model_mixins.py  registry_mixins.py
app/helpers/etcd/: etcd_client.py  etcd_config_loader.py
app/helpers/front_supply/: __init__.py  client.py  models.py
app/helpers/interfaces/: __init__.py  amqp_abc.py  auth_abc.py  client_http_abc.py  file_hosting_abc.py  middleware.py  pagination_abc.py  registry_abc.py  websocket_manager_abc.py
app/helpers/mediacontroller/: __init__.py  client.py
app/helpers/metrics/: __init__.py  prometheus_extension.py  prometheus_middleware.py
app/helpers/minio/: __init__.py  error_codes.py  generator_masks.py  minio_client.py
app/helpers/notify/: __init__.py  client.py
app/workers/: model_client.py
config/: settings.yml
db/alembic/: env.py
(+17 files in other folders)
