[tool.poetry]
name = "service_model_manager"
version = "0.0.1"
description = "Model Manager"
authors = ["Serchaev German <serchaev.german@yndex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
yarl = "^1.9.4"
async-timeout = "^4.0.3"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
dynaconf = "^3.2.1"
alembic = "^1.11.3"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
fastapi-filter = "^2.0.0"
websockets = "^12.0"
redis = "5.0.4"
tenacity = "^8.4.1"
ujson = "^5.10.0"
aio-pika = "^9.4.1"
prometheus-client = "^0.20.0"
asyncpg = "^0.29.0"
setproctitle = "^1.3.3"
pydantic-core = "^2.20.1"
annotated-types = "^0.7.0"
requests = "^2.32.3"
httpx-oauth = "^0.15.1"
pandas = "^2.2.3"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.13.2"
faker = "^19.3.1"
sqlalchemy-utils = "^0.41.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
black = "^24.2.0"
flake8 = "^7.0.0"
bandit = "^1.7.7"

flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.1"
flake8-pep3101 = "^2.1.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.4.0"
flake8-string-format = "^0.3.0"
flake8-super-call = "^1.0.0"

[tool.black]
line-length = 120
extend-exclude = "db|tests"

[tool.isort]
profile = "black"
skip = [".venv", "venv", "alembic", "tests"]

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests", "db", "venv", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
